--- a/css/style.css
+++ b/css/style.css
@@ -2,22 +2,40 @@
 *{
     font-family: 'Poppins',cursive;
 }
+/* Đối với thiết bị di động */
+@media screen and (max-width: 574px) {
+    .greetings {
+        font-size: 3rem;
+        font-weight: 500;
+        text-align: center;
+    }
+    .description {
+        font-size: 1rem;
+    }
+    .button a {
+        font-size: .5rem;
+    }
+}
+
 body{
-    width: 100px;
-    color: azure;
-    width: 100%;
-    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     background-color: black;
+    width: 100%;
+    height: auto;
+    color: rgba(255, 255, 255, 0.75);
+    font-family: 'Anonymous Pro', monospace;
+    background-color: rgb(25, 25, 25);
+    
 }
 .greetings{
-    margin: 0 0 0 5% ;
+    margin: 1rem 0;
     display: block;
-    font-size: 6rem;
-    font-weight: 900;
+    font-size: 3rem;
+    font-weight: 500;
+    text-align: center;
 }
 .greetings > span{
     animation: glow 2.5s ease-in-out infinite;
@@ -70,7 +88,7 @@ body{
 
 
 #letter{
-    letter-spacing: -20px;
+    letter-spacing: -0.2em;
 }
 @media screen and (max-width:574px){
     .greetings{
@@ -132,7 +150,7 @@ html{
 }
 body{
   height: calc(100vh - 8em);
-  padding: 4em;
+
   color: rgba(255,255,255,.75);
   font-family: 'Anonymous Pro', monospace;  
   background-color: rgb(25,25,25);  
@@ -166,19 +184,48 @@ body{
   to{border-right-color: transparent;}
 }
 .csstext{
-    width: 100%;
+    display: flex;
+    width: 95%;
     font-family: 'Anonymous Pro', monospace;
-    font-size:22px; 
+    font-size: 12pt;
     text-align: center;
-    white-space: nowrap;
-    margin: 20px 50px; 
-    letter-spacing: 1px; 
+    white-space: normal;
+    justify-content: center;
+    padding: 28px 45%;
+    letter-spacing: 1px;
     color: #fff;
     font-weight: normal;
     
+}
+@media screen and (max-width: 574px) {
+    .csstext{
+        padding: 2em; /* Thay đổi độ dày lề cho thiết bị di động */
+    font-size: 12pt; /* Điều chỉnh kích thước phông chữ cho thiết bị di động */
+    text-align: center; /* Căn giữa văn bản cho thiết bị di động */
+    width: 100%; /* Sử dụng toàn bộ chiều rộng cho thiết bị di động */
+    letter-spacing: 0.5px; /* Điều chỉnh khoảng cách giữa các chữ cái */
+    }
 }
 #pp_letter{
     color:#fff;
     letter-spacing: 1px;
     color:#fff; text-decoration: none;
 }
+.spacing_01{
+
+    padding: 0 3rem;
+}
+/* CSS cho thiết bị di động */
+@media (max-width: 768px) {
+    .mobile-break {
+      display: block; /* Hiển thị thẻ <br> trên thiết bị di động */
+    }
+  }
+  
+  /* CSS cho các thiết bị khác */
+  @media (min-width: 769px) {
+    .mobile-break {
+      display: none; /* Ẩn thẻ <br> trên các thiết bị khác */
+    }
+  }
+  
