--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500;1,900&display=swap');
-*{
-    font-family: 'Poppins',cursive;
+@import url('https://fonts.googleapis.com/css?family=Anonymous+Pro');
+
+* {
+    font-family: 'Poppins', cursive, sans-serif;
 }
+
 /* Đối với thiết bị di động */
 @media screen and (max-width: 574px) {
     .greetings {
@@ -29,6 +32,10 @@ body{
     font-family: 'Anonymous Pro', monospace;
     background-color: rgb(25, 25, 25);
     
+}
+
+.hidden {
+    display: none;
 }
 .greetings{
     margin: 1rem 0;
@@ -119,7 +126,7 @@ body{
     animation: rotate 10s linear infinite; /* Xoay trong 10 giây vô hạn lần */
     width: 100px; /* Kích thước của hình hoa */
     height: 100px;
-    background: url('/img/flower_white.png') no-repeat center center; /* Đặt hình ảnh hoa làm nền */
+    background: url('../img/flower_white.png') no-repeat center center; /* Đặt hình ảnh hoa làm nền */
     background-size: cover; /* Đảm bảo hình ảnh hoa nền bao phủ hoàn toàn */
 }
 .flower {
@@ -141,7 +148,6 @@ body{
     position: absolute;
   }
 /* Google Fonts */
-@import url(https://fonts.googleapis.com/css?family=Anonymous+Pro);
 
 /* Global */
 html{
